--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,14 @@
-* {
-    padding:0;
-    margin:0;
-}
-
 .txtTitle, .txtCurrentTemp, .txtTitle2 {
     padding: 15px;
 }
 
+* {
+    box-sizing: border-box;
+}
 body {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(134,0,255,1) 100%);
     font-family: Arial, sans-serif;
     color: #fff;
-    position: relative;
-    overflow: hidden; /* Para que o conteúdo do pseudo-elemento não ultrapasse */
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-image: url('../assets/adolescente-bebendo-agua.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    filter: blur(8px); /* Efeito de desfoque */
-    z-index: -1; /* Colocar atrás do conteúdo */
-    opacity: 0.4;
 }
 
 table {
@@ -41,8 +21,6 @@ th, td {
     border: 1px solid #ddd;
     padding: 8px;
 }
-
-
 
 /* Graph */
 
@@ -66,7 +44,7 @@ th, td {
 .highcharts-data-table caption {
     padding: 1em 0;
     font-size: 1.2em;
-    color: #555;
+    color: #000000;
 }
 
 .highcharts-data-table th {
@@ -82,7 +60,7 @@ th, td {
 
 .highcharts-data-table thead tr,
 .highcharts-data-table tr:nth-child(even) {
-    background: #f8f8f8;
+    background: #000000;
 }
 
 .highcharts-data-table tr:hover {
