--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,24 @@ th, td {
     text-align: center;
     color: #32325D;
 }
+
+/* loader */
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.content {
+    text-align: center;
+    font-size: 20px;
+}
