--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,38 @@ body {
     color: #fff;
 }
 
+.getCities {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.citylist, .districtlist, #btnWeather {
+    display: none;
+}
+
+.btnWeather {
+    padding: 30px;
+    line-height: 1.5;
+}
+.boxFormCities {
+    margin-bottom: 25px;
+}
+
+.boxFormCities input {
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.boxFormCities select {
+    padding: 15px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
