--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
     color: #fff;
 }
 
+.boxForm {
+    display: none;
+}
+
 .getCities {
     margin: 0 auto;
     display: flex;
@@ -19,7 +23,7 @@ body {
     flex-direction: column;
 }
 
-.citylist, .districtlist, #btnWeather {
+.citylist, .districtlist, #btnWeather, .uflist {
     display: none;
 }
 
@@ -32,15 +36,19 @@ body {
 }
 
 .boxFormCities input {
+    margin-top: 15px;
     padding: 10px;
     font-size: 16px;
     line-height: 1.5;
+    border-radius: 1;
+    min-width: 300px;
 }
 
 .boxFormCities select {
     padding: 15px;
     font-size: 16px;
     line-height: 1.5;
+    min-width: 300px;
 }
 
 table {
@@ -177,6 +185,12 @@ th, td {
 }
 
 /* loader */
+
+#loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .loader {
     border: 16px solid #f3f3f3;
